Fix gitignore to allow schema SQL files in PRPs/
- Remove blanket *.sql ignore
- Add specific patterns for dumps only
- Explicitly allow PRPs/*.sql for schema files

--- a/.gitignore
+++ b/.gitignore
@@ -155,9 +155,12 @@ next-env.d.ts
 backend/*.db
 backend/*.sqlite
 
-# PostgreSQL dumps
-*.sql
+# PostgreSQL dumps (but keep schema files)
 *.dump
+*-dump.sql
+backup-*.sql
+# Keep schema files in PRPs/
+!PRPs/*.sql
 
 # ============
 # IDE/EDITORS
